# PizzaApp

./: .deepsource.toml  .gitignore  CheckoutValidateFields.swift  README.md  ShoppingCart+CoreDataClass.swift  ShoppingCart+CoreDataProperties.swift  ShoppingCartItem+CoreDataClass.swift  ShoppingCartItem+CoreDataProperties.swift  l.swift  pyproject.toml
DeliverApp/PizzaAppDelivery/: ContentView.swift  HomeView.swift  Info.plist  InvoiceView.swift  LoginView.swift  OrderInfoView.swift  PizzaAppDeliveryApp.swift  StartViewRedirector.swift  UserData+CoreDataClass.swift  UserData+CoreDataProperties.swift
DeliverApp/PizzaAppDelivery.xcodeproj/: project.pbxproj
OrderApp/: Order+CoreDataClass.swift  Order+CoreDataProperties.swift  ShoppingCartItem+CoreDataProperties.swift
PizzaApp/: AppDelegate.swift  ContentView.swift  HomeView.swift  PizzaApp.swift  PizzaAppApp.swift  SceneDelegate.swift  allPizzas.json
PizzaApp.xcodeproj/: project.pbxproj
PizzaAppTests/: PizzaAppTests.swift
PizzaAppUITests/: PizzaAppUITests.swift
backend/: pyproject.toml  requirements_dev.txt  tox.ini
backend/create_database/: create.sql
backend/database/: all_delete.sql  create.sql  create_tables.sql  delete_tables.sql
backend/database/schema/: PizzaTech_ER_diagram.drawio
backend/etc/: create_tables.sql
backend/pizza-project-backend/: defaults.py  insert_base_data.py
backend/pizza-project-backend/helpers/: config.py
backend/res/base_data/: #1#category.csv  #2#item.csv  #3#item_price.csv  #4#item_speciality.csv
backend/res/base_db_data/: #3#prices.csv  item_specialities.csv
backend/res/tables/: create_tables.sql
backend/src/: api.py  config.py  database.py  defaults.py  pizzaapp.py
backend/src/other/: insert_base_data.py
backend/src/pizza_backend/: api.py
backend/src/pizza_backend/pizzaapp/: __init__.py  auth.py  catalog.py  config.py  order.py  store.py  tables.py  utils.py
backend/src/pizza_backend/tools/: base_data.py  database.py
backend/src/pizzaapp/: __init__.py  api.py  auth.py  catalog.py  config.py  database.py  defaults.py  exceptions.py  order.py  queries.yaml  store.py  tables.py  utils.py
backend/src/pizzaapp/app/: __init__.py  auth.py  catalog.py  config.py  defaults.py  order.py  store.py  tables.py  utils.py
backend/src/pizzaapp/tools/: base_data.py  database.py
backend/src/tools/: base_data.py  database.py  database_operations.py  insert_base_data.py  tables.py  utils.py
backend/src/tools/queries/: create_tables.sql
backend/tests/: conftest.py  mock_database.py  test_config.py  test_database.py
(+171 files in other folders)
