[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pizza-project-backend"
version = "0.0.1"
description = "Backend for the PizzaTech-App"

authors = [
	"Léon Becker <lb@space8.me>"
]

repository = "https://www.github.com/sp4c38/PizzaApp"
homepage = "https://www.github.com/sp4c38/PizzaApp"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
Flask = "^1.1.2"

