[tool.poetry]
name = "pizzaapp"
version = "1.0"
description = "Backend for the PizzaApp."
authors = ["Léon Becker <lb@alien8.de>"]
packages = [
    { include = "pizzaapp", from = "src" }	
]
include = ["res/base_data"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-box = "^5.3.0"
SQLAlchemy = "^1.4.2"
rich = "^10.1.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
arrow = "^1.0.3"
loguru = "^0.5.3"
gunicorn = {version = "^20.1.0", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-randomly = "3.5.0"
pytest-lazy-fixture = "^0.6.3"
pylint = "^2.7.4"
flake8 = "^3.9.1"
pip-autoremove = "^0.9.1"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
